# statix

./: Cargo.toml  default.nix  flake.nix  overlay.nix  readme.md
.github/: dependabot.yml
.github/workflows/: check.yaml  update-flake-inputs.yaml  update-flake-inputs.yml
dev-flake/: flake.nix
docs/: flake-part.nix
flake-parts/: ci.nix  dependabot.nix  dev-shell.nix  dogfood.nix  files.nix  fmt.nix  git-hooks.nix  git-ignore.nix  license.nix  nixpkgs.nix  rust.nix  statix.nix  vim-plugin.nix
lib/src/: lib.rs  make.rs
lib/src/lints/: bool_comparison.rs  collapsible_let_in.rs  manual_inherit_from.rs
macros/src/: metadata.rs  test.rs
