[workspace]
resolver = "3"

members = ["bin", "lib", "macros", "vfs"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "*"
ariadne = "*"
clap = { features = ["derive"], version = "*" }
hex = "*"
ignore = "*"
indexmap = "*"
indoc = "*"
insta = { features = ["filters"], version = "*" }
lazy_static = "*"
lib.path = "./lib"
macros.path = "./macros"
paste = "*"
proc-macro2 = "*"
quote = "*"
rayon = "*"
rnix = "0.12.0"
rowan = "0.15.17"
serde = { features = ["derive"], version = "*" }
serde_json = { version = "*" }
sha2 = "*"
similar = "*"
strip-ansi-escapes = "*"
syn = { features = ["full"], version = "*" }
tempfile = "*"
thiserror = "*"
toml = "*"
vfs.path = "./vfs"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
